<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorBackgroungTrangChu"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/group_tab_radio"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorAccent"
        >

        <RadioButton
            android:id="@+id/rd_moinhat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/moinhat"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:textAlignment="center"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:background="@drawable/changebackground_tab"
            android:checked="true"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/colorBackgroungTrangChu"
            />

        <RadioButton
            android:id="@+id/rd_danhmuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/danhmuc"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:textAlignment="center"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:background="@drawable/changebackground_tab"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/colorBackgroungTrangChu"
            />

        <RadioButton
            android:id="@+id/rd_khuvuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/khuvuc"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:textAlignment="center"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:background="@drawable/changebackground_tab"
            />

    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/gantoi"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/nearby"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"

                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/blogs"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/blog"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/giaohang"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/order"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/gameandfun"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/gameandfun"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/danhgia"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/review"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:text="@string/topmember"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/user1"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    />

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>