<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B71C1C"
    tools:context="androi30_b.foody2.View.DangNhapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/foodytext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edEmailDK"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#ffffff"
                android:hint="@string/email"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/edPassworDK"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#ffffff"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"

                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/edNhapLaiPassworDK"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#ffffff"
                android:hint="Nhập lại password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"

                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDangKi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/radius_button"
            android:backgroundTint="#ffffff"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/dangki"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>
